--- a/ClientConvertisseurV1/ClientConvertisseurV1.csproj
+++ b/ClientConvertisseurV1/ClientConvertisseurV1.csproj
@@ -11,6 +11,7 @@
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
     <DefaultLanguage>fr-FR</DefaultLanguage>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\ConvertisseurEuroPage.xaml" />
